--- a/src/components/Video/Video.scss
+++ b/src/components/Video/Video.scss
@@ -6,7 +6,7 @@
   min-height: 0;
   padding-bottom: 56.25%;
   background-color: #040404;
-  margin: 3rem 0 0 0;
+  margin: 0 0 2rem;
 }
 
 .Video__inner {
