--- a/src/layouts/PageLayout/PageLayout.scss
+++ b/src/layouts/PageLayout/PageLayout.scss
@@ -11,3 +11,13 @@
     font-size: $type_size_header;
   }
 }
+
+.Footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 8rem;
+  background-color: #afafaf;
+  color: white;
+}
