--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -41,7 +41,6 @@ p {
 .App {
   text-align: center;
   width: 100%;
-  height: 100%;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 2rem 2rem 9rem 2rem;
 }
