--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -19,7 +19,9 @@ $stats_height: 9rem;
 
 .Footer__toggle {
   position: absolute;
-  right: 2rem;
+  right: 1rem;
+  top: 0;
+  padding: 1rem;
   font-size: 2rem;
   cursor: pointer;
 }
