--- a/src/components/Video/Video.scss
+++ b/src/components/Video/Video.scss
@@ -6,7 +6,8 @@
   min-height: 0;
   padding-bottom: 56.25%;
   background-color: #040404;
-  margin: 0 0 2rem;
+  margin: 0 auto;
+  max-width: 80rem;
 }
 
 .Video__inner {
