--- a/src/components/VideoItem/VideoItem.scss
+++ b/src/components/VideoItem/VideoItem.scss
@@ -1,14 +1,18 @@
 @import 'base';
 
 .VideoItem {
-  margin: 0 auto 10rem;
+  margin: 0 auto 6rem;
   text-align: left;
-  max-width: 80rem;
+  border-top: 1rem solid $color_body;
 }
 
 .VideoItem__name {
-  text-align: center;
   margin: 0 0 2rem;
+  padding: 0 1rem 0 6rem;
+  max-width: 80rem;
+  display: inline-block;
+  background-color: $color_body;
+  color: $color_background;
 }
 
 .VideoItem__description {
