--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -22,6 +22,7 @@ body {
   font-size: $type_size_body;
   font-family: $type_font_normal;
   color: $color_body;
+  background: #928989;
   display: flex;
   height: 100%;
   width: 100%;
@@ -41,6 +42,9 @@ p {
 .App {
   text-align: center;
   width: 100%;
+  height: 100%;
   margin: 0 auto;
-  padding: 0 0 9rem;
+  padding: 0;
+  max-width: 80rem;
+  background-color: $color_background;
 }
