--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,20 +1,36 @@
 @import 'base';
 
 .About {
-  max-width: 60rem;
+  width: 90vw;
+  max-width: 90rem;
   margin: 0 auto;
   text-align: left;
+  background-color: $color_body;
+  color: $color_background;
+  padding: 2rem 2rem 1rem;
+
+  @include for-tablet-portrait-up() {
+    padding: 4rem 4rem 2rem 4rem;
+  }
 }
 
 .About__description {
-  font-size: 2rem;
+  font-size: 1.4rem;
   line-height: 1.4;
   margin: 0 0 4rem;
+
+  @include for-tablet-portrait-up() {
+    font-size: 2rem;
+  }
 }
 
 .About__credit {
-  font-size: 1.3rem;
+  font-size: 1rem;
   text-align: center;
+
+  @include for-tablet-portrait-up() {
+    font-size: 1.3rem;
+  }
 
   p {
     margin: 0 0 2rem;
@@ -22,5 +38,6 @@
 
   a {
     text-decoration: underline;
+    color: $color_background;
   }
 }
