--- a/src/components/Video/Video.scss
+++ b/src/components/Video/Video.scss
@@ -13,8 +13,35 @@
 .Video__inner {
   @include cover();
 
+  &:after {
+    content: '';
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    position: absolute;
+    background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAADCAYAAABWKLW/AAAAHklEQVQYV2NkYGBg+M/A8J+RgYGREcYACTKCCJgsAHVgBgKJ2n1xAAAAAElFTkSuQmCC);
+    opacity: 1;
+    transition: all 0.2s;
+  }
+
   iframe {
     width: 100%;
     height: 100%;
+    filter: grayscale(100%);
+  }
+}
+
+.Video--active .Video__inner,
+.Video__inner:hover {
+  &:after {
+    opacity: 0;
+    display: none;
+  }
+}
+
+.Video--active .Video__inner {
+  iframe {
+    filter: none;
   }
 }
