--- a/src/layouts/PageLayout/PageLayout.scss
+++ b/src/layouts/PageLayout/PageLayout.scss
@@ -1,1 +1,14 @@
 @import 'base';
+
+h1 {
+  font-size: $type_size_header;
+  margin: 2rem auto 8rem;
+  font-size: 2.4rem;
+  display: inline-block;
+  font-weight: 100;
+  text-transform: uppercase;
+  text-align: left;
+  border-bottom: 1px solid;
+  padding: 0 2rem;
+  width: 80rem;
+}
