--- a/src/layouts/PageLayout/PageLayout.scss
+++ b/src/layouts/PageLayout/PageLayout.scss
@@ -2,13 +2,11 @@
 
 h1 {
   font-size: $type_size_header;
-  margin: 2rem auto 8rem;
+  margin: 2rem 0 8rem;
   font-size: 2.4rem;
-  display: inline-block;
   font-weight: 100;
   text-transform: uppercase;
   text-align: left;
   border-bottom: 1px solid;
   padding: 0 2rem;
-  width: 80rem;
 }
