--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -19,9 +19,10 @@ $stats_height: 4rem;
   background-color: $color_body;
   color: white;
   display: inline-block;
-  padding: 1rem;
+  padding: 1rem 1rem 1rem 4rem;
+  text-align: left;
   cursor: pointer;
-  width: 14rem;
+  width: 16rem;
   position: relative;
 
   i {
@@ -40,6 +41,6 @@ $stats_height: 4rem;
     font-size: 2.4rem;
     position: absolute;
     right: 1rem;
-    top: 0.25rem;
+    top: 0.2rem;
   }
 }
