--- a/src/components/Views/Home.scss
+++ b/src/components/Views/Home.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  align-items: flex-start;
+  align-items: flex-end;
 
   @include for-tablet-landscape-up() {
     padding: 0 33vw 0 4rem;
