--- a/src/components/Views/Home.scss
+++ b/src/components/Views/Home.scss
@@ -8,14 +8,10 @@
   align-items: flex-end;
 
   @include for-tablet-landscape-up() {
-    padding: 0 33vw 0 4rem;
-  }
-
-  @include for-desktop-up() {
-    padding: 0 33vw 0 4rem;
+    padding: 0 4rem;
   }
 
   @include for-big-desktop-up() {
-    padding: 0 25vw 0 4rem;
+    padding: 0 33vw 0 4rem;
   }
 }
