--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -18,6 +18,7 @@
   font-size: 1.4rem;
   line-height: 1.4;
   margin: 0 0 4rem;
+  text-align: center;
 
   @include for-tablet-portrait-up() {
     font-size: 2rem;
