--- a/src/components/Spacer/Spacer.scss
+++ b/src/components/Spacer/Spacer.scss
@@ -37,7 +37,11 @@
   position: relative;
   height: 0;
   min-height: 0;
-  padding-bottom: 56.25%;
+  padding-bottom: 10%;
+
+  @include for-tablet-portrait-up() {
+    padding-bottom: 56.25%;
+  }
 }
 
 .Spacer__bottom {
