--- a/src/layouts/PageLayout/PageLayout.scss
+++ b/src/layouts/PageLayout/PageLayout.scss
@@ -2,7 +2,7 @@
 
 h1 {
   font-size: $type_size_header;
-  margin: 2rem 0 8rem;
+  margin: 0;
   font-size: 2.4rem;
   font-weight: 100;
   text-transform: uppercase;
